# Zynq-SoM

./: .gitignore  README.md  Zynq_SoM.kicad_pro
eda/: Makefile  README.md  pyproject.toml
eda/src/zynq_eda/: __init__.py  __main__.py  cli.py
eda/src/zynq_eda/catalog/: __init__.py  connector_banks.py  io_library.py
eda/src/zynq_eda/catalog/components/: __init__.py
eda/src/zynq_eda/catalog/datasheets/: README.md  __init__.py  fetch_datasheets.py
eda/src/zynq_eda/catalog/refcircuits/: __init__.py  cp2102n.py  dip_switch.py  ds3231.py  eeprom_24lc256.py  eeprom_24lc256_edid.py  fmc_lpc.py  fusb302.py  hdmi_connector.py  hx5008nlt.py  ina226.py  jtag_header.py  lvds_lcd.py  microsd.py  mipi_camera.py  pmod.py  power_input.py  rj45.py  sma_clock.py  swd_header.py  tactile_switch.py  tlv757.py  tpd12s016.py  tps2051.py  usbc_connector.py  usblc6.py  user_led.py
eda/src/zynq_eda/catalog/registry/: __init__.py  bom_io.py  parts_registry.py
eda/src/zynq_eda/core/: __init__.py  pipeline.py
eda/src/zynq_eda/core/emit/: __init__.py  project.py  root_sheet.py  schematic.py
eda/src/zynq_eda/projects/: __init__.py
eda/tests/integration/: test_planner_anchor_parity.py  test_planner_end_to_end.py
eda/tests/unit/: test_astar.py  test_bbox_occupancy.py  test_blocks.py  test_connector_labels.py  test_geometry.py  test_label_bbox_rotation.py  test_plan_anchors.py  test_plan_block.py  test_plan_data_model.py  test_plan_edge_stacks.py  test_plan_lane_widths.py  test_plan_pin_specs.py  test_render_and_clearance.py  test_router.py  test_separate.py  test_smoke.py
(+339 files in other folders)
