[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zynq_eda"
version = "0.1.0"
description = "Programmatic KiCad schematic generator for the Zynq-SoM project (carrier + future SoM boards)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Nicholas Antoniades" },
]
dependencies = [
    "kicad-sch-api==0.5.6",
    "kicad-skip==0.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff",
]
render = [
    "pymupdf>=1.24",
    "pillow>=10",
]

[project.scripts]
zynq_eda = "zynq_eda.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zynq_eda"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
